--- a/Flight Sickness/Info.plist
+++ b/Flight Sickness/Info.plist
@@ -28,6 +28,12 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>DDCHardware-Compressed.otf</string>
+		<string>DDCHardware-Condensed.otf</string>
+		<string>DDCHardware-Regular.otf</string>
+	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
