--- a/Flight Sickness/Info.plist
+++ b/Flight Sickness/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>DDCHardware-Compressed.otf</string>
+		<string>DDCHardware-Condensed.otf</string>
+		<string>DDCHardware-Regular.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -27,12 +33,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
-	</array>
-	<key>UIAppFonts</key>
-	<array>
-		<string>DDCHardware-Compressed.otf</string>
-		<string>DDCHardware-Condensed.otf</string>
-		<string>DDCHardware-Regular.otf</string>
+		<string>gamekit</string>
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
